# cpp_gtest_test

./: .gitignore  CMakeLists.txt  c_cpp_properties.json  hello_test.cc  main.cpp  readme.md
lib/: CMakeLists.txt
lib/math_utilities/: CMakeLists.txt
src/: CMakeLists.txt
test/: CMakeLists.txt  hello_test.cc
